--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
         <meta charset="UTF-8">        
         <meta name="viewport" content="width=device-width inital-scale=1.0">
         <title>Document</title>
+        <style>
+            a{
+                text-decoration: none;
+            }
+        </style>
     </head>
     <body>
+        <a href="www.google.com"> Google</a>
         <!-- Ordered List-->
         <h4>Student List</h4>
         <ol type="I">
